tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/bool/mixed-case.stderr
TOML parse error at line 1, column 9
  |
1 | valid = False
  |         ^
invalid string
expected `"`, `'`
